--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll {
+  display: inline-flex;
+  width: max-content;
+  animation: scroll 20s linear infinite;
+}
+
+.ul-header-top:hover .animate-scroll {
+  animation-play-state: paused;
+}
