--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,29 @@
 .ul-header-top:hover .animate-scroll {
   animation-play-state: paused;
 }
+
+@keyframes slide-in {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.animate-slide-in {
+  animation: slide-in 0.3s ease-out forwards;
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+.animate-slide-out {
+  animation: slide-in 0.3s ease-out forwards;
+}
