--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,26 @@
 .animate-slide-out {
   animation: slide-in 0.3s ease-out forwards;
 }
+
+
+
+.ul-most-sell-filter-navs button.active {
+  background-color: red;
+  font-weight: 600;
+}
+
+
+
+.fade-in-up {
+  opacity: 0;
+  transform: translateY(10px);
+  animation: fadeInUp 0.4s forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
