--- a/src/App.css
+++ b/src/App.css
@@ -420,7 +420,7 @@
 .category-strip {
   width: 100%;
   background: #ffffff;
-  padding: 20px 0;
+  /* padding: 20px 0; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -561,4 +561,10 @@
     gap: 16px;
     padding: 8px 10px;
   }
+}
+.ul-toolbar-count {
+  text-align: right;
+  width: 100%;
+  font-size: 14px;
+  color: #444;
 }
